--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         <li><a href="#props">Props</a></li>
         <li><a href="#this">Problem z 'this'</a></li>
         <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
     </ul>
 
 
